[package]
name = "wsvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.32", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.18"
miniz_oxide = "0.7"
nanoid = "0.4"

blake3 = "1.4"
